fix(QTDI-3124): S6204 toList() remove the unmodiableList method